# NightScan

./: .editorconfig  .env.example  .env.production.example  .env.secure  .env.unified.example  .eslintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  API_VERSIONING_MIGRATION_GUIDE.md  CAMERA_BOOT_CONFIGURATION_SUMMARY.md  CAMERA_MIGRATION_SUMMARY.md  CAMERA_SENSOR_DETECTION_SUMMARY.md  CLAUDE.md  CONFLICT_RESOLUTION_SUMMARY.md  DATABASE_ANALYSIS_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  EMERGENCY_PROCEDURES.md  FILENAME_SYSTEM_DOCUMENTATION.md  INFOMANIAK_TRAINING_GUIDE.md  INSTALLATION_GUIDE.md  LOCATION_FEATURES.md  Manual_en.md  Manuel.txt  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READINESS_FINAL_REPORT.md  PRODUCTION_READINESS_PLAN.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_VPS_LITE_PLAN.md  QUICKSTART.md  QUOTA_SYSTEM_SUMMARY.md  README-Backup-DR.md  README-Docker.md  README-ML-Versioning.md  README.md  SECURITY.md  SECURITY_ENHANCEMENT_REPORT.md  SECURITY_INTEGRATION_PLAN.md  (+129 more)
.github/: dependabot.yml
Audio Training/: README.md
Audio_Training/: README.md  README_en.md  __init__.py  setup.sh
Audio_Training_EfficientNet/: README.md  SYSTEM_SUMMARY.md  __init__.py
Edge_Training_System/: README.md
NightScanPi/: README.md  requirements-pi-zero.txt  setup_pi.sh
Picture Training/: README.md
Picture_Training/: README.md  README_en.md  setup.sh
Picture_Training_Enhanced/: README.md  __init__.py  requirements.txt
api/: __init__.py
api_versioning/: __init__.py  config.py  decorators.py  middleware.py  registry.py  utils.py
audio_training_efficientnet/: AMELIORATIONS_SPECTROGRAMMES.md  BALANCED_WORKFLOW.md  GUIDE_ENTRAINEMENT.md  MIGRATION_GUIDE.md  OPTIMIZATIONS.md  README_SEGMENTS.md  README_scalable_pregenerated.md  __init__.py  analyze_audio_files.py  analyze_balanced_dataset.py  analyze_spectrograms.ipynb  audio_augmentation.py  audio_dataset.py  audio_dataset_scalable.py  audio_segmentation.py  benchmark_optimizations.py  check_dataset_distribution.py  cleanup_old_data.sh  convert_mp3_to_wav.py  create_augmented_pool.py  create_balanced_index.py  create_balanced_index_fixed.py  create_classes_json.py  diagnose_audio_class.py  download_evaluation_quick.sh  download_evaluation_results.sh  evaluate_audio_model.py  example_usage_adaptive_augmentation.py  extract_segments_balanced.py  extract_segments_from_results.py  inspect_model.py  nightscan_segments.py  pregenerate_spectrograms.py  pregenerate_spectrograms_scalable.py  pregenerate_spectrograms_simple.py  prepare_audio_data.py  process_single_augmentation.py  run_augmented_pool_by_class.sh  run_augmented_pool_optimized.sh  run_augmented_pool_safe.sh  (+21 more)
auth/: __init__.py  auth_routes.py  jwt_manager.py  session_jwt_bridge.py
config/: circuit_breakers.json  environments.py  example.json
database/: README.md  create_database.sql  init_database.sh  test_data.sql
database_migrations/: add_data_retention_system.sql
docker/: Dockerfile.test
docs/: BACKUP_DISASTER_RECOVERY.md  CIRCUIT_BREAKERS.md  CI_CD_GUIDE.md  CI_CD_PIPELINE.md  CONFIGURATION_GUIDE.md  CONNECTION_POOLING_GUIDE.md  CSP_MIGRATION_GUIDE.md  DATABASE_INTEGRITY_GUIDE.md  DOCKER_PYTHON313_COMPATIBILITY.md  FLASK_VERSION_MIGRATION.md  MIGRATION_TO_CICD.md  ML_SERVING_OPTIMIZATION.md  MULTIPROCESSING_PYTHON313.md  N1_QUERIES_OPTIMIZATION_GUIDE.md  OPERATIONS_PROCEDURES.md  PYTHON_313_COMPATIBILITY.md  PYTHON_VERSION_COMPATIBILITY.md  RATE_LIMITING_GUIDE.md  SECRETS_MANAGEMENT.md  SECURITY_AUDIT_EXTERNAL_GUIDE.md  SENSITIVE_DATA_PROTECTION.md  SESSION_CONFIGURATION.md  STREAMING_FILE_UPLOADS.md  TESTING_STANDARDS.md  UNIFIED_CONFIGURATION.md  api_server.md  flask_app.md  vps_lite_first_connection.md  vps_volume_setup.md  wordpress_plugin.md
examples/: async_prediction_client.js
gateway/: .env.example  README.md  kong-jwt.yml  kong.yml  setup_kong.sh  test_gateway.sh
ios-app/: App.js  AppContext.js  README.md  TASKS.md  app.json  jest.setup.js  package-lock.json  package.json
k8s/: hpa.yaml  monitoring.yaml  namespace.yaml  postgres.yaml  prediction-api.yaml  redis.yaml  secrets-management.yaml  web-app.yaml
mobile_models/: audio_light_metadata.json  audio_light_model.tflite  light_models_report.json  model_registry_api.json  photo_light_metadata.json  photo_light_model.tflite  quantization_report.json
model_optimization/: quantization_config.json  quantization_pipeline.py  requirements.txt  simple_quantization.py
models/: best_model.pth  efficientnet_large.py  labels.json
monitoring/: alerting_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  prometheus.yml  setup_monitoring.sh
nginx/: nginx.production.conf  nginx.secure.conf
nightscan_pi/: .env.template  PRODUCTION_SETUP.md  README.md  configure_production.sh  nightscan-camera-hello  validate_production.py
picture_training/: inference.py  train.py
picture_training_enhanced/: CLASS_NAMES_FLOW.md  CORRECTIONS_LOG.md  IMAGE_SIZE_GUIDE.md  INFOMANIAK_DEPLOYMENT_GUIDE.md  README.md  __init__.py  config.yaml  data_preparation.py  evaluate_model.py  export_models.py  metrics.py  photo_dataset.py  photo_model_dynamic.py  preprocess_images.py  quick_train_photo.py  requirements_training.txt  run_training.sh  setup_environment.sh  test_class_names_flow.py  test_coherence.py  train_photo.py  train_real_images.py  visualize_results.py
scripts/: backup-cron.sh  backup_automation.sh  backup_restore.py  check_docker_secrets.py  create-mock-model.py  data_retention_cleanup.py  deploy-enhanced.sh  deploy-monitoring.sh  deploy-production.sh  deploy-vps-lite.sh  deploy.sh  deploy_production.sh  deploy_staging.sh  load_testing_production.py  log_maintenance.py  log_monitor_dashboard.py  manage_circuit_breakers.py  migrate-users-to-quotas.py  migrate_existing_data.py  predict.py  prepare_dataset_transfer.sh  preprocess.py  rollback-emergency.sh  secure_logging_migration.py  security-audit-production.py  security-audit.py  security-check.sh  setup-backup.sh  setup-firewall.sh  setup-secrets.sh  setup-ssl.sh  setup-vault.sh  setup_infomaniak_gpu.sh  train.py  (+9 more)
(+339 files in other folders)
